# video_condense

./: CMakeLists.txt  README.md  draw_mv.cpp  transcoding.cpp  transcoding_old.cpp
